# mcp-demo-2

./: README.md
mcp_server/: Cargo.toml  db.txt  test_db.txt
mcp_server/src/: main.rs
